Update 'tasgnam46-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:e913a89a183446516c7fd2429f841a912afe3c2a@sha256:b8a03500bea1c92fb12107b2d893c631975f64d5741973728b81aebf86c7df5d

--- a/components/tasgnam46-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/tasgnam46-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tasgnam46-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:e913a89a183446516c7fd2429f841a912afe3c2a@sha256:b8a03500bea1c92fb12107b2d893c631975f64d5741973728b81aebf86c7df5d
+          name: container-image
